<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">STAPP</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_about">Über</string>
    <string name="action_help">Hilfe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_start">Start</string>
    <string name="action_pause">Pause</string>
    <string name="action_stop">Stop</string>
    <string name="dialog_save_training_message">Soll das Training gespeichert werden?</string>
    <string name="dialog_save_training_title">Training speichern</string>
    <string name="dialog_save">Speichern</string>
    <string name="dialog_discard">Verwerfen</string>
    <string name="title_activity_impressum_view">Impressum</string>
    <string name="title_activity_app_info_view">App Information</string>
    <string name="action_info">App Info</string>
    <string name="title_activity_guided_tour">GuidedTourActivity</string>
    <string name="action_power">Battery</string>
    <string name="battery_charge">Batterie-Ladezustand</string>

</resources>