<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_start"
        android:title="@string/action_start"
        android:icon="@drawable/ic_menu_play"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_pause"
        android:title="@string/action_pause"
        android:icon="@drawable/ic_menu_pause"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_stop"
        android:title="@string/action_stop"
        android:icon="@drawable/ic_menu_stop"
        android:showAsAction="ifRoom|withText"/> 
   <item
        android:id="@+id/action_bluetooth"
        android:icon="@drawable/access_bluetooth"
        android:showAsAction="always"
        /> 
        
    
    <item android:id="@+id/info" android:title="@string/action_info" /><item android:id="@+id/about" android:title="@string/action_about" /><item android:id="@+id/help"
          android:title="@string/action_help" />
    
    <item android:id="@+id/action_power" android:title="@string/action_power" android:icon="@drawable/battery_high" android:showAsAction="always"></item>
</menu>